@@ -138,7 +138,7 @@ allprojects {
         resolutionStrategy {
             failOnVersionConflict()
 
-            force "org.agrona:agrona:${libs.versions.agrona.get()}",
+            force libs.agrona,
                   libs.byteBuddy,
                   libs.byteBuddy.agent,
                   // patching conflicting Checkstyle dependencies
@@ -202,6 +202,7 @@ subprojects {
     }
 
     tasks.withType(Test).configureEach { test ->
+        jvmArgs('--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED')
         jvmArgs('--add-opens', 'java.base/java.util.zip=ALL-UNNAMED')
         if (buildJavaVersion >= 21) {
             jvmArgs('-XX:+EnableDynamicAgentLoading')
